Fixed input & btn gaps

--- a/css/signup.css
+++ b/css/signup.css
@@ -3,7 +3,7 @@
     flex-flow: column wrap;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 90vh;
 }
 
 .signup__form {
@@ -18,6 +18,12 @@
 
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
     border-radius: 2%;
+}
+
+.signup__form-inputFields {
+    display: flex;
+    flex-flow: column wrap;
+    gap: 15px;
 }
 
 .signup__name {
@@ -44,5 +50,5 @@
 }
 
 .btn-primary {
-    margin-top: 13px;
+    margin-top: 10px;
 }
